<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/input_decoration_color"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/country_capital_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/country_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_country_name"
                    android:textColor="@color/login_button_background_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/country_capital_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_country_capital"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/country_population_tv"
                android:layout_marginTop="@dimen/very_small_divider_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_capital_container"
                android:text="@string/default_country_population"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/country_region_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_country_region"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/small_divider_10"
                    android:layout_marginTop="@dimen/very_small_divider_5"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/country_sub_region_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_divider_10"
                    android:text="@string/default_country_sub_region"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/show_on_map_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/login_button_background_color" />

    </LinearLayout>

</LinearLayout>