<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/login_form_margin"
        android:layout_marginRight="@dimen/login_form_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_divider_10"
                android:text="@string/register_btn_txt"
                android:textColor="@android:color/black"
                android:textSize="@dimen/login_big_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_email_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:background="@drawable/input_field_decoration"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:hint="@string/enter_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/register_password_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_field_decoration"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_field_decoration"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginTop="@dimen/login_form_margin"
                android:background="@drawable/login_button_decoration"
                android:text="@string/register_btn_txt"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_small_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/very_small_divider_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/have_account_msg" />

                <TextView
                    android:id="@+id/login_now_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/very_small_divider_5"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_now_msg"
                    android:textColor="@color/login_button_background_color" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_divider_20" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_divider_10" />


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>